2009-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Core.Assemblies/SystemAssembly.cs: Make assembly
	  name consistent with "normalized" names.

	* MonoDevelop.Core.Assemblies/TargetRuntime.cs: Use
	  TargetFramework for assembly lookups. Prioritize framework
	  assemblies over GAC assemblies.

2009-06-15  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Assemblies\MsNetFrameworkBackend.cs: Fix
	  framework location path.

2009-06-11  Lluis Sanchez Gual  <lluis@novell.com>

	* frameworks:
	* Makefile.am:
	* frameworks.xml:
	* MonoDevelop.Core.csproj:
	* MonoDevelop.Core.addin.xml:
	* frameworks/framework_NET_2_0.xml:
	* frameworks/framework_NET_1_1.xml:
	* frameworks/framework_NET_3_0.xml:
	* frameworks/framework_NET_4_0.xml:
	* frameworks/framework_NET_3_5.xml:
	* MonoDevelop.Core.Assemblies/TargetRuntime.cs:
	* MonoDevelop.Core.Assemblies/TargetFramework.cs:
	* MonoDevelop.Core.AddIns/TargetFrameworkNode.cs:
	* MonoDevelop.Core.Assemblies/MonoTargetRuntime.cs:
	* MonoDevelop.Core.Assemblies/MsNetTargetRuntime.cs:
	* MonoDevelop.Core.Assemblies/MonoFrameworkBackend.cs:
	* MonoDevelop.Core.Assemblies/MsNetFrameworkBackend.cs:
	* MonoDevelop.Core.Assemblies/SystemAssemblyService.cs:
	* MonoDevelop.Core.Assemblies/TargetFrameworkBackend.cs: Added
	  extensibility support for frameworks. Now add-ins can define
	  new frameworks and support for them for specific runtimes.

2009-06-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Assemblies\MsNetTargetRuntime.cs: Added sdk
	  tools path to the framework tools path.

2009-06-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.ProgressMonitoring\LogTextWriter.cs: New
	  override for TextWriter. Improves performance on Windows.

2009-06-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Properties:
	* MonoDevelop.Core.Properties/IXmlConvertable.cs:
	* MonoDevelop.Core.Properties/PropertyFileLoadException.cs: